test/asm/readfile-nonexist.err
error: Error opening `READFILE` file "readfile-nonexist.inc": No such file or directory
    at readfile-nonexist.asm(1)
Assembly aborted with 1 error!
