test/asm/readfile-nonexist.asm
def s equs readfile("readfile-nonexist.inc")
assert strlen(#s) == 0
